Add Demandeurs Tables, Import, Create Skeleton

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,13 @@
 .pink {
   color: #cb416b;
 }
+.pink-bg {
+  background-color: #cb416b;
+}
+
+.green-bg {
+  background-color: #adcab2;
+}
 
 .green {
   color: #055923;
