--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,81 @@
 #root {
   background-color: #65886b;
 }
+
+.login-bg {
+  background: linear-gradient(107.06deg, rgba(5, 89, 35, 0.58) 20.27%, rgba(203, 65, 107, 0.64) 62.57%);
+}
+
+.main-bg {
+  background: linear-gradient(
+    105deg,
+    rgba(250, 239, 243, 0.1),
+    rgba(5, 89, 35, 0.58) 20%,
+    rgba(203, 65, 107, 0.64) 68.59%,
+    rgba(250, 238, 242, 0.49) 95.98%
+  );
+}
+
+.section-bg {
+  background: linear-gradient(
+    120deg,
+    rgb(255,255,255),
+    rgba(203, 65, 107, 0.64) 68.59%,    
+  );
+}
+
+.pink {
+  color: #cb416b;
+}
+.pink-bg {
+  background-color: #cb416b;
+}
+
+.green-bg {
+  background-color: #adcab2;
+}
+
+.green {
+  color: #055923;
+}
+
+.sidebar {
+  background: rgba(233, 220, 220, 0.12);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 0px 50px 50px 0px;
+}
+
+.sidebar-link-pin {
+  background: linear-gradient(180deg, rgba(5, 89, 35, 0.47) 0%, #6a283c 55.21%);
+  border-radius: 10px;
+  height: 20px;
+  width: 10px;
+}
+
+.sidebar-link-sub {
+  margin-left: 20px;
+  border: 3px solid transparent;
+  background: linear-gradient(white, white) padding-box,
+    linear-gradient(101.25deg, #055923 4.77%, rgba(203, 65, 107, 0.64) 94.12%) border-box;
+}
+
+.line {
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  width: 90%;
+  margin: 1rem 0;
+}
+
+.torotate {
+  animation: rotate 1s ease-in;
+  animation-iteration-count: infinite;
+}
+
+
+@keyframes rotate {
+  from{
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
